--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/DarrylSimpson/u-develop-it#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.6",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
